--- a/less/blocks/about-us.less
+++ b/less/blocks/about-us.less
@@ -101,6 +101,25 @@
     &:nth-child(5) {
       margin-bottom: 0;
     }
+
+    &_1 {
+      order: 1;
+    }
+    &_2 {
+      order: 3;
+    }
+    &_3 {
+      order: 5;
+    }
+    &_4 {
+      order: 2;
+    }
+    &_5 {
+      order: 4;
+    }
+    &_6 {
+      order: 6;
+    }
   }
 }
 
