--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,14 +1,14 @@
 .container {
-  width: 320px;
   margin: 0 auto;
 
   outline: red dashed 1px;
 
   @media @tablet-width {
-    width: 668px;
+    width: 87%;
   }
 
   @media @desktop-width {
-    width: 1050px;
+    width: 91%;
+    max-width: 1050px;
   }
 }
