--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -4,15 +4,13 @@
 
 .contacts__inner-wrapper {
   .container;
-
-  padding: 0 30px;
-
   padding-top: 35px;
   padding-bottom: 40px;
 }
 
 .contacts__title {
   margin-top: 0;
+  padding: 0 30px;
 
   font-family: verdana, sans-serif;
   font-size: 24px;
@@ -21,6 +19,7 @@
 
 .contacts__content {
   width: 100%;
+  padding: 0 30px;
 
   font-size: 14px;
   line-height: 30px;
@@ -44,6 +43,7 @@
 .contacts__visible-map {
   position: relative;
 
+  width: 100%;
   height: 455px;
   width: 100%;
   margin-bottom: 40px;
@@ -51,14 +51,16 @@
 
 #yandex-map {
   position: absolute;
-  left: -100%;
-  right: -100%;
 
   height: 455px;
+  width: 100%;
 }
 
 .contacts__feedback-btn {
-  width: 100%;
+  display: block;
+  width: calc(100% - 18.75%);
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media @tablet-width {
@@ -125,20 +127,23 @@
 
     &::before {
       left: 60px;
+      top: 70px;
     }
 
     &::after {
       left: 68px;
+      top: 70px;
     }
   }
 
   .contacts__flex-wrapper {
     order: -2;
-    width: 50%;
+    width: 40%;
+    margin-top: 30px;
   }
 
   .contacts__title {
-    width: 50%;
+    width: 100%;
 
     font-size: 50px;
     line-height: 57px;
@@ -146,7 +151,7 @@
 
   .contacts__content {
     top: 180px;
-    width: 50%;
+    width: 100%;
 
     flex-direction: column;
 
@@ -161,7 +166,7 @@
 
   .contacts__visible-map {
     height: 455px;
-    width: 50%;
+    width: 60%;
     margin-bottom: 0;
   }
 
@@ -171,7 +176,6 @@
 
   .contacts__feedback-btn {
     order: -1;
-    width: 175px;
     margin: 0 0;
   }
 }
