--- a/less/blocks/promo.less
+++ b/less/blocks/promo.less
@@ -5,14 +5,13 @@
 .promo__inner-wrapper {
   .container;
 
-  background-image: url("../img/promo-bg.jpg");
+  background-image: url("../img/promo-bg-mobile.jpg");
   background-repeat:  no-repeat;
-  background-position: 50% -64%;
-  background-size: 200%;
-
+  background-position: center top;
 }
 
 .promo__title {
+  min-height: 300px;
   padding: 85px 30px 110px;
   margin: 0;
 
@@ -44,7 +43,8 @@
     content: "";
     position: absolute;
     right: 30px;
-    top: 10px;
+    top: 50%;
+    margin-top: -40px;
     width: 80px;
     height: 80px;
 
@@ -105,7 +105,7 @@
     &:after {
       content: "";
       position: absolute;
-      bottom: -12px;
+      bottom: -5px;
       left: 0;
       right: 0;
 
@@ -117,8 +117,8 @@
   }
 
   .promo__inner-wrapper {
-    background-size: 170%;
-    background-position: 50% 50%;
+    background-image: url("../img/promo-bg.jpg");
+    background-size: auto;
   }
 
   .promo__title {
@@ -139,14 +139,21 @@
 
   .promo__btn {
     flex-grow: 1;
+    padding-top: 36px;
+    padding-bottom: 36px;
+
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: translateY(-5px);
+    }
   }
 }
 
 @media @desktop-width {
 
   .promo__inner-wrapper {
-    background-size: 110%;
-    background-position: 50% 100%;
+
   }
 
   .promo__title {
