--- a/less/blocks/week-product.less
+++ b/less/blocks/week-product.less
@@ -5,13 +5,14 @@
   &::after {
     content: "";
     position: absolute;
-    bottom: -95px;
+    bottom: -20px;
     left: 0;
     right: 0;
 
     height: 40px;
 
     background: url("../img/zigzag-grey.png") no-repeat;
+    background-position: center;
     background-size: 100%;
 
   }
@@ -23,7 +24,6 @@
   .container;
   padding: 0 30px;
   padding-bottom: 30px;
-  margin-bottom: 120px;
 
   display: flex;
   flex-direction: column;
@@ -73,11 +73,13 @@
 }
 
 .week-product__stats td {
-  padding: 5px 0;
+  padding: 7px 0;
 }
 
 .week-product__photo-container {
   margin-bottom: 25px;
+
+  text-align: center;
 }
 
 .week-product__price {
@@ -88,6 +90,7 @@
   font-size: 16px;
   line-height: 24px;
   font-weight: bold;
+  color: #444444;
 }
 
 .week-product__order-btn {
@@ -98,13 +101,13 @@
   .week-product {
 
     &::after {
-      bottom: -70px;
+      bottom: -86px;
     }
   }
 
   .week-product__inner-wrapper {
     padding: 0;
-    margin-bottom: 70px;
+    margin-bottom: 80px;
 
     flex-direction: row;
     flex-wrap: wrap;
