--- a/less/styles.less
+++ b/less/styles.less
@@ -8,3 +8,6 @@
 @import "blocks/responses.less";
 @import "blocks/contacts.less";
 @import "blocks/page-footer.less";
+@import "blocks/inner-page-title.less";
+@import "blocks/catalog.less";
+@import "blocks/manufacture.less";
