--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -43,16 +43,18 @@
 .contacts__visible-map {
   position: relative;
 
+
+
   width: 100%;
   height: 455px;
   width: 100%;
   margin-bottom: 40px;
 }
 
-#yandex-map {
+#map {
   position: absolute;
 
-  height: 455px;
+  height: 100%;
   width: 100%;
 }
 
