--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -20,6 +20,8 @@ html {
   text-align: center;
   text-transform: uppercase;
 
+  transition: background-color 0.2s, color 0.2s;
+
   &:hover {
     color: #ffffff;
     background-color: #444444;
