--- a/less/styles.less
+++ b/less/styles.less
@@ -11,3 +11,4 @@
 @import "blocks/inner-page-title.less";
 @import "blocks/catalog.less";
 @import "blocks/manufacture.less";
+@import "blocks/form.less";
